--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ python:
   - "3.7"
   - "nightly"
 
+services:
+  - docker
+
+before_install:
+  - docker-compose -d
+
 install:
   - pip install -r requirements.txt
 
