--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
   - docker
 
 before_install:
-  - docker-compose -d
+  - docker-compose up -d
 
 install:
   - pip install -r requirements.txt
