--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,13 @@ services:
   - docker
 
 before_install:
-  - docker-compose up -d
+  - docker-compose up -d db
 
 install:
   - pip install -r requirements.txt
 
 script:
-  - python manage.py test
+  - python manage.py test --settings=SardAppren_API.settings.docker
+
+after_script:
+  - docker-compose up -d api
