--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,20 @@ python:
   - "3.7"
   - "nightly"
 
+env:
+  global:
+  - 'SFTP_USER=[user]'
+  - 'SFTP_PASSWORD=[password]'
+  - 'SFTP_KEY=[base64-encoded-rsa-key]'
+  - 'HOST=[host]'
+  - 'PATH=[path]'
+after_success:
+- echo "${SFTP_KEY}" | base64 --decode >/tmp/sftp_rsa
+- curl --ftp-create-dirs
+       -T filename
+       --key /tmp/sftp_rsa
+       sftp://${SFTP_USER}:${SFTP_PASSWORD}@${HOST}/${PATH}
+
 services:
   - docker
 
