--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
 
   db:
     image: postgres:11.2-alpine
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_DB: sardappren
       POSTGRES_USER: sardappren
