--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python manage.py test --settings=SardAppren.settings.docker
+  - python manage.py test --settings=SardAppren.settings.base
 
 after_script:
   - docker-compose up -d api
